Do refactoring and make it compatible with Java17